corrected alignment issues, added about me text.

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,11 +1,22 @@
+.bigContainer {
+	display: flex;
+}
+
+.background {
+	background-image: linear-gradient(#808080, rgb(255, 255, 255), #000);
+	height: 100px;
+	width: 25vw;
+}
+
 .b-container {
 	background-color: #808080;
+	border-radius: 15px;
 	display: flex;
 	flex-direction: row;
 	font-size: 14pt;
 	margin: 10px;
 	text-align: center;
-	width: 100vw;
+	width: 95vw;
 }
 @media (max-width: 800px) {
 	.b-container {
@@ -18,13 +29,32 @@
 }
 
 .container {
+	display: flex;
+	justify-content: space-around;
+	font-size: 14pt;
+	margin: 10px;
+	width: 100vw;
+}
+@media (max-width: 800px) {
+	.container {
+		display: flex;
+		flex-direction: column;
+		font-size: 14pt;
+		margin: 10px;
+		width: 100vw;
+	}
 }
 
 body {
+	background-color: #35a0a0;
 }
 
 h2 {
 	font-size: 22pt;
+}
+
+h2 div {
+	justify-content: space-between;
 }
 
 h2 p {
@@ -41,12 +71,22 @@ header {
 	padding-bottom: 120px;
 	text-align: end;
 }
-main {
-	border-left: 2px solid #000000;
-}
+/* main {
+	
+} */
 
 .align {
+	display: flex;
+	justify-content: flex-start;
+	margin: 0px 50px 0px 0px;
 	text-align: start;
+}
+
+.rAlign {
+	display: flex;
+	border-left: 2px solid #000000;
+	justify-content: center;
+	margin: 0 0 0px 120px;
 }
 /* Responsive layout based on viewing device size */
 
